kubernetes/apps/downloads/samba/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# This policy is to allow inbound SMB traffic to the Samba pod
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: samba-ingress
  labels:
    app.kubernetes.io/instance: &instance samba
    app.kubernetes.io/name: &name samba
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  ingress:
  # Cluster internal SMB and discovery traffic
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "445"
              protocol: TCP
            - port: "445"
              protocol: UDP
            - port: "3702"
              protocol: TCP
            - port: "3702"
              protocol: UDP
            - port: "5355"
              protocol: UDP
    # ICMP echo requests (for ping)
    - icmps:
        - fields:
            - type: 8
              family: IPv4
    # Allow traffic from Windows PC
    - fromCIDR:
        - 192.168.88.0/24
      toPorts:
        - ports:
            - port: "445"
              protocol: TCP
            - port: "445"
              protocol: UDP
            - port: "3702"
              protocol: TCP
            - port: "3702"
              protocol: UDP
            - port: "5355"
              protocol: UDP
  egress:
    # Allow ICMP to cluster and LAN
    - toEntities:
        - cluster
      icmps:
        - fields:
            - type: 0   # echo reply
              family: IPv4
            - type: 8   # echo request
              family: IPv4
    - toCIDR:
        - 192.168.88.0/24
      icmps:
        - fields:
            - type: 0
              family: IPv4
            - type: 8
              family: IPv4
    # DNS egress to CoreDNS in cluster
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    # SMB egress to Windows LAN
    - toCIDR:
        - 192.168.88.0/24
      toPorts:
        - ports:
            - port: "445"
              protocol: TCP
            - port: "445"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: samba-sidecar-egress
  namespace: downloads
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: samba
      app.kubernetes.io/name: samba
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: vpn-gateway
            app.kubernetes.io/name: pod-gateway
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
        - ports:
            - port: "67"
              protocol: UDP
            - port: "68"
              protocol: UDP
